--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "firebase-tools": "^9.16.0",
+    "firebase-tools": "^11.16.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "jwt-decode": "^3.1.2",
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.16",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2",
     "worker-loader": "^3.0.8"
